tests/snapshots/defaults__insta_vanilla_basic.snap
---
source: tests/defaults.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
