tests/snapshots/defaults__interactive_mode_command_execution-3.snap
---
source: tests/defaults.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo barbaz                                                                    "
"  1/1                                                                        0/0"
"c> barbaz                                                                       "
cursor: (24, 10)
