tests/snapshots/defaults__interactive_mode_command_execution@001.snap
---
source: tests/defaults.rs
description: "input: interactive\noptions: -i --cmd echo 'foo {q}'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo                                                                           "
"  1/1                                                                        0/0"
"c>                                                                              "
cursor: (24, 4)
