tests/snapshots/defaults__interactive_mode_command_execution@002.snap
---
source: tests/defaults.rs
description: "input: interactive\noptions: -i --cmd echo 'foo {q}'\nafter:\n  @type \"bar\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo bar                                                                       "
"  1/1                                                                        0/0"
"c> bar                                                                          "
cursor: (24, 7)
