tests/snapshots/defaults__interactive_mode_command_execution@003.snap
---
source: tests/defaults.rs
description: "input: interactive\noptions: -i --cmd echo 'foo {q}'\nafter:\n  @type \"baz\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo barbaz                                                                    "
"  1/1                                                                        0/0"
"c> barbaz                                                                       "
cursor: (24, 10)
